# gr-eq

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  eq_lms_dump.cc
cmake/Modules/: eqConfig.cmake
docs/: README.eq  aalms.sci  eq_lms_dump1.ods  eq_lms_dump1.txt
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: eq_lms_ff.grc
grc/: CMakeLists.txt  eq_eq_lms_ff.xml
include/eq/: CMakeLists.txt  api.h  eq_lms_ff.h
lib/: CMakeLists.txt  eq_lms_ff_impl.cc  eq_lms_ff_impl.h  qa_eq.cc  qa_eq.h  test_eq.cc
python/: CMakeLists.txt  __init__.py  qa_eq_lms_ff.py
swig/: CMakeLists.txt  eq_swig.i
